--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,19 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="news_purple">#FF6200EE</color>
+    <color name="news_black">#FF000000</color>
+    <color name="news_white">#FFFFFFFF</color>
+    <color name="news_grey_01">#5f5f69</color>
+    <color name="news_grey_02">#52514d</color>
+    <color name="news_grey_03">#555555</color>
+    <color name="news_grey_04">#888888</color>
+    <color name="news_grey_05">#939393</color>
+    <color name="news_grey_06">#d1d1d1</color>
+    <color name="news_grey_07">#d6d6d6</color>
+    <color name="news_grey_08">#e9e9e9</color>
+    <color name="news_grey_09">#eeeff1</color>
+    <color name="news_bluegrey">#f2f4f6</color>
+
 </resources>
