--- a/app/src/main/res/navigation/main_navigation.xml
+++ b/app/src/main/res/navigation/main_navigation.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/navigation_top_news"
-        android:name="com.syoon.news.app.ui.TopNewsFragment"
+        android:name="com.syoon.news.app.ui.topnews.TopNewsFragment"
         android:label="@string/top_news"
         tools:layout="@layout/fragment_top_news" />
 
