RecyclerView에 TopNews 연결, BaseFragment 추가

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,8 +9,12 @@
     <color name="white">#FFFFFFFF</color>
 
     <color name="news_purple">#FF6200EE</color>
-    <color name="news_black">#FF000000</color>
     <color name="news_white">#FFFFFFFF</color>
+    <color name="news_black_01">#FF000000</color>
+    <color name="news_black_02">#0E0E2C</color>
+    <color name="news_black_03">#212124</color>
+    <color name="news_grey">#AFAFAF</color>
+
     <color name="news_grey_01">#5f5f69</color>
     <color name="news_grey_02">#52514d</color>
     <color name="news_grey_03">#555555</color>
@@ -20,6 +24,6 @@
     <color name="news_grey_07">#d6d6d6</color>
     <color name="news_grey_08">#e9e9e9</color>
     <color name="news_grey_09">#eeeff1</color>
-    <color name="news_bluegrey">#f2f4f6</color>
+
 
 </resources>
