--- a/app/src/main/res/layout/fragment_top_news.xml
+++ b/app/src/main/res/layout/fragment_top_news.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -13,13 +14,18 @@
         app:layout_constraintTop_toTopOf="parent"
         app:title="News App" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="top news"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_top_news"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="8dp"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/toolbar_top_news"
+        app:layout_constraintVertical_bias="0.0"
+        tools:listitem="@layout/item_top_news" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
