Category ui 버튼 추가, NewsDetail fragment 추가

--- a/app/src/main/res/layout/fragment_saved.xml
+++ b/app/src/main/res/layout/fragment_saved.xml
@@ -8,6 +8,7 @@
         android:id="@+id/toolbar_saved"
         android:layout_width="0dp"
         android:layout_height="70dp"
+        android:background="@color/news_bluegrey"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
