--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,6 +14,7 @@
     <color name="news_black_02">#0E0E2C</color>
     <color name="news_black_03">#212124</color>
     <color name="news_grey">#AFAFAF</color>
+    <color name="news_bluegrey">#f2f4f6</color>
 
     <color name="news_grey_01">#5f5f69</color>
     <color name="news_grey_02">#52514d</color>
