화면 전환 이벤트 처리 & NewsDetailFragment로 데이터 전달

--- a/app/src/main/res/layout/fragment_category.xml
+++ b/app/src/main/res/layout/fragment_category.xml
@@ -12,7 +12,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:title="Category" />
+        app:title="Category"
+        app:titleTextAppearance="@style/TextTitle.Bold" />
 
     <TextView
         android:id="@+id/tv_category_banner"
@@ -32,6 +33,7 @@
         android:layout_height="90dp"
         android:layout_marginStart="30dp"
         android:layout_marginTop="36dp"
+        android:background="@drawable/background_circle"
         android:text="business"
         android:textSize="10sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -41,6 +43,7 @@
         android:id="@+id/btn_category_entertainment"
         android:layout_width="90dp"
         android:layout_height="90dp"
+        android:background="@drawable/background_circle"
         android:ellipsize="end"
         android:maxLines="1"
         android:text="entertainment"
@@ -54,6 +57,7 @@
         android:layout_width="90dp"
         android:layout_height="90dp"
         android:layout_marginEnd="30sp"
+        android:background="@drawable/background_circle"
         android:text="general"
         android:textSize="10sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -64,6 +68,7 @@
         android:layout_width="90dp"
         android:layout_height="90dp"
         android:layout_marginTop="36dp"
+        android:background="@drawable/background_circle"
         android:text="health"
         android:textSize="10sp"
         app:layout_constraintStart_toStartOf="@id/btn_category_business"
@@ -73,6 +78,7 @@
         android:id="@+id/btn_category_science"
         android:layout_width="90dp"
         android:layout_height="90dp"
+        android:background="@drawable/background_circle"
         android:text="science"
         android:textSize="10dp"
         app:layout_constraintEnd_toStartOf="@id/btn_category_sport"
@@ -83,6 +89,7 @@
         android:id="@+id/btn_category_sport"
         android:layout_width="90dp"
         android:layout_height="90dp"
+        android:background="@drawable/background_circle"
         android:text="sports"
         android:textSize="10sp"
         app:layout_constraintEnd_toEndOf="@id/btn_category_general"
@@ -93,6 +100,7 @@
         android:layout_width="90dp"
         android:layout_height="90dp"
         android:layout_marginTop="36dp"
+        android:background="@drawable/background_circle"
         android:ellipsize="end"
         android:maxLines="1"
         android:text="technology"
