--- a/app/src/main/res/layout/fragment_top_news.xml
+++ b/app/src/main/res/layout/fragment_top_news.xml
@@ -13,7 +13,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:title="News App" />
+        app:title="News App"
+        app:titleTextAppearance="@style/TextTitle.Bold" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_top_news"
