--- a/app/src/main/res/layout/fragment_saved.xml
+++ b/app/src/main/res/layout/fragment_saved.xml
@@ -12,7 +12,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:title="Saved News" />
+        app:title="Saved News"
+        app:titleTextAppearance="@style/TextTitle.Bold" />
 
     <TextView
         android:layout_width="wrap_content"
