--- a/app/src/main/res/layout/item_top_news.xml
+++ b/app/src/main/res/layout/item_top_news.xml
@@ -4,6 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+        <variable
+            name="viewModel"
+            type="com.syoon.news.app.ui.topnews.TopNewsViewModel" />
 
         <variable
             name="topnews"
@@ -18,6 +21,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="8dp"
+        android:onClick="@{() -> viewModel.openNewsDetail(topnews)}"
         app:cardCornerRadius="4dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
