--- a/app/src/main/res/layout/fragment_category.xml
+++ b/app/src/main/res/layout/fragment_category.xml
@@ -23,7 +23,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:maxLines="2"
-        android:text="Choose a category to start reading"
+        android:text="@string/category_guide"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/toolbar_category" />
 
@@ -34,8 +34,12 @@
         android:layout_marginStart="30dp"
         android:layout_marginTop="36dp"
         android:background="@drawable/background_circle"
-        android:text="business"
-        android:textSize="10sp"
+        android:text="@string/business"
+        android:textAllCaps="false"
+        android:textSize="11sp"
+        app:icon="@drawable/ic_monetization_on_24"
+        app:iconGravity="textTop"
+        app:iconSize="35dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_category_banner" />
 
@@ -46,8 +50,12 @@
         android:background="@drawable/background_circle"
         android:ellipsize="end"
         android:maxLines="1"
-        android:text="entertainment"
-        android:textSize="10sp"
+        android:text="@string/entertainment"
+        android:textAllCaps="false"
+        android:textSize="11sp"
+        app:icon="@drawable/ic_music_note_24"
+        app:iconGravity="textTop"
+        app:iconSize="35dp"
         app:layout_constraintEnd_toStartOf="@id/btn_category_general"
         app:layout_constraintStart_toEndOf="@id/btn_category_business"
         app:layout_constraintTop_toTopOf="@id/btn_category_business" />
@@ -58,8 +66,12 @@
         android:layout_height="90dp"
         android:layout_marginEnd="30sp"
         android:background="@drawable/background_circle"
-        android:text="general"
-        android:textSize="10sp"
+        android:text="@string/general"
+        android:textAllCaps="false"
+        android:textSize="11sp"
+        app:icon="@drawable/ic_groups_24"
+        app:iconGravity="textTop"
+        app:iconSize="35dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@id/btn_category_entertainment" />
 
@@ -69,8 +81,12 @@
         android:layout_height="90dp"
         android:layout_marginTop="36dp"
         android:background="@drawable/background_circle"
-        android:text="health"
-        android:textSize="10sp"
+        android:text="@string/health"
+        android:textAllCaps="false"
+        android:textSize="11sp"
+        app:icon="@drawable/ic_fitness_center_24"
+        app:iconGravity="textTop"
+        app:iconSize="35dp"
         app:layout_constraintStart_toStartOf="@id/btn_category_business"
         app:layout_constraintTop_toBottomOf="@id/btn_category_business" />
 
@@ -79,8 +95,12 @@
         android:layout_width="90dp"
         android:layout_height="90dp"
         android:background="@drawable/background_circle"
-        android:text="science"
-        android:textSize="10dp"
+        android:text="@string/science"
+        android:textAllCaps="false"
+        android:textSize="11sp"
+        app:icon="@drawable/ic_science_24"
+        app:iconGravity="textTop"
+        app:iconSize="35dp"
         app:layout_constraintEnd_toStartOf="@id/btn_category_sport"
         app:layout_constraintStart_toEndOf="@id/btn_category_health"
         app:layout_constraintTop_toTopOf="@id/btn_category_health" />
@@ -90,8 +110,12 @@
         android:layout_width="90dp"
         android:layout_height="90dp"
         android:background="@drawable/background_circle"
-        android:text="sports"
-        android:textSize="10sp"
+        android:text="@string/sports"
+        android:textAllCaps="false"
+        android:textSize="11sp"
+        app:icon="@drawable/ic_sports_soccer_24"
+        app:iconGravity="textTop"
+        app:iconSize="35dp"
         app:layout_constraintEnd_toEndOf="@id/btn_category_general"
         app:layout_constraintTop_toTopOf="@id/btn_category_science" />
 
@@ -103,8 +127,13 @@
         android:background="@drawable/background_circle"
         android:ellipsize="end"
         android:maxLines="1"
-        android:text="technology"
-        android:textSize="10sp"
+        android:text="@string/technology"
+        android:textAllCaps="false"
+        android:textSize="11sp"
+        app:icon="@drawable/ic_build_24"
+        app:iconGravity="textTop"
+        app:iconSize="35dp"
+
         app:layout_constraintStart_toStartOf="@id/btn_category_health"
         app:layout_constraintTop_toBottomOf="@id/btn_category_health" />
 
