--- a/app/src/main/res/layout/fragment_news_detail.xml
+++ b/app/src/main/res/layout/fragment_news_detail.xml
@@ -33,7 +33,7 @@
         android:layout_width="24dp"
         android:layout_height="24dp"
         android:layout_marginEnd="25dp"
-        android:src="@drawable/ic_star_border_24"
+        android:src="@drawable/selector_star"
         app:layout_constraintBottom_toBottomOf="@id/tv_news_detail_title"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@id/tv_news_detail_title" />
@@ -65,13 +65,13 @@
         android:layout_height="218dp"
         android:layout_margin="20dp"
         android:scaleType="centerCrop"
-
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_news_detail_authors" />
 
     <TextView
         android:id="@+id/tv_news_detail_description"
+        style="@style/TextSubtitle14.Bold"
         android:layout_width="361dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
