--- a/app/src/main/res/layout/fragment_news_detail.xml
+++ b/app/src/main/res/layout/fragment_news_detail.xml
@@ -20,9 +20,9 @@
     <TextView
         android:id="@+id/tv_news_detail_title"
         style="@style/TextSubtitle15.Bold"
-        android:layout_width="300dp"
+        android:layout_width="290dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="25dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="19dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/toolbar_news_detail"
@@ -32,7 +32,7 @@
         android:id="@+id/iv_star"
         android:layout_width="24dp"
         android:layout_height="24dp"
-        android:layout_marginEnd="25dp"
+        android:layout_marginEnd="16dp"
         android:src="@drawable/selector_star"
         app:layout_constraintBottom_toBottomOf="@id/tv_news_detail_title"
         app:layout_constraintEnd_toEndOf="parent"
@@ -61,9 +61,11 @@
 
     <ImageView
         android:id="@+id/iv_news_detail_img"
-        android:layout_width="361dp"
+        android:layout_width="0dp"
         android:layout_height="218dp"
-        android:layout_margin="20dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="16dp"
         android:scaleType="centerCrop"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -72,9 +74,11 @@
     <TextView
         android:id="@+id/tv_news_detail_description"
         style="@style/TextSubtitle14.Bold"
-        android:layout_width="361dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/iv_news_detail_img"
