--- a/app/src/main/res/layout/fragment_news_detail.xml
+++ b/app/src/main/res/layout/fragment_news_detail.xml
@@ -1,88 +1,97 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar_news_detail"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:background="@color/news_bluegrey"
-        android:paddingEnd="10dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:navigationIcon="@drawable/ic_arrow_back_24"
-        tools:title="Photo Proves Us star" />
+    <data>
+        <variable
+            name="topnews"
+            type="com.syoon.news.app.model.News" />
 
-    <TextView
-        android:id="@+id/tv_news_detail_title"
-        style="@style/TextSubtitle15.Bold"
-        android:layout_width="290dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="19dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/toolbar_news_detail"
-        tools:text="10 of the Cheapest and Healthiest Ways to Feed a Group, According" />
+    </data>
 
-    <ImageView
-        android:id="@+id/iv_star"
-        android:layout_width="24dp"
-        android:layout_height="24dp"
-        android:layout_marginEnd="16dp"
-        android:src="@drawable/selector_star"
-        app:layout_constraintBottom_toBottomOf="@id/tv_news_detail_title"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@id/tv_news_detail_title" />
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/tv_news_detail_authors"
-        style="@style/TextSubtitle14.Bold"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="14dp"
-        android:ellipsize="end"
-        android:maxLines="1"
-        app:layout_constraintStart_toStartOf="@id/tv_news_detail_title"
-        app:layout_constraintTop_toBottomOf="@id/tv_news_detail_title"
-        tools:text="Pedro Berrill" />
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar_news_detail"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:background="@color/news_bluegrey"
+            android:paddingEnd="10dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:navigationIcon="@drawable/ic_arrow_back_24"
+            tools:title="Photo Proves Us star" />
 
-    <TextView
-        android:id="@+id/tv_news_detail_time"
-        style="@style/TextSubtitle14.Grey.Bold"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="@id/iv_star"
-        app:layout_constraintTop_toTopOf="@id/tv_news_detail_authors"
-        tools:text="3 hours ago" />
+        <TextView
+            android:id="@+id/tv_news_detail_title"
+            style="@style/TextSubtitle15.Bold"
+            android:layout_width="290dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="19dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/toolbar_news_detail"
+            tools:text="10 of the Cheapest and Healthiest Ways to Feed a Group, According" />
 
-    <ImageView
-        android:id="@+id/iv_news_detail_img"
-        android:layout_width="0dp"
-        android:layout_height="218dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="16dp"
-        android:scaleType="centerCrop"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_news_detail_authors" />
+        <ImageView
+            android:id="@+id/iv_star"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_marginEnd="16dp"
+            android:src="@drawable/selector_star"
+            app:layout_constraintBottom_toBottomOf="@id/tv_news_detail_title"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@id/tv_news_detail_title" />
 
-    <TextView
-        android:id="@+id/tv_news_detail_description"
-        style="@style/TextSubtitle14.Bold"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/iv_news_detail_img"
-        tools:text="American Sydney McLaughlin has shattered her own 400m hurdles world record
+        <TextView
+            android:id="@+id/tv_news_detail_authors"
+            style="@style/TextSubtitle14.Bold"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="14dp"
+            android:ellipsize="end"
+            android:maxLines="1"
+            app:layout_constraintStart_toStartOf="@id/tv_news_detail_title"
+            app:layout_constraintTop_toBottomOf="@id/tv_news_detail_title"
+            tools:text="Pedro Berrill" />
+
+        <TextView
+            android:id="@+id/tv_news_detail_time"
+            style="@style/TextSubtitle14.Grey.Bold"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintEnd_toEndOf="@id/iv_star"
+            app:layout_constraintTop_toTopOf="@id/tv_news_detail_authors"
+            tools:text="3 hours ago" />
+
+        <ImageView
+            android:id="@+id/iv_news_detail_img"
+            android:layout_width="0dp"
+            android:layout_height="218dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="16dp"
+            android:scaleType="centerCrop"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tv_news_detail_authors" />
+
+        <TextView
+            android:id="@+id/tv_news_detail_description"
+            style="@style/TextSubtitle14.Bold"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="16dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/iv_news_detail_img"
+            tools:text="American Sydney McLaughlin has shattered her own 400m hurdles world record
         at the world athletics championships, leaving fans lost for words.McLaughlin, the reigning
          Olympic champion, was the red-hot favourite and absolutely smashed her own world record
          by nearly a second in the final on Saturday in Eugene, Oregon. The 22-year-old was
@@ -91,4 +100,5 @@
          ff her previous mark of 51.41, set at last year’s Tokyo Olympics." />
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
