--- a/app/src/main/res/navigation/main_navigation.xml
+++ b/app/src/main/res/navigation/main_navigation.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/navigation_top_news"
-        android:name="com.syoon.news.app.ui.topnews.TopNewsFragment"
+        android:name="com.syoon.news.app.ui.fragment.TopNewsFragment"
         android:label="TopNewsFragment"
         tools:layout="@layout/fragment_top_news" >
         <action
@@ -17,7 +17,7 @@
 
     <fragment
         android:id="@+id/navigation_categories"
-        android:name="com.syoon.news.app.ui.category.CategoryFragment"
+        android:name="com.syoon.news.app.ui.fragment.CategoryFragment"
         android:label="CategoryFragment"
         tools:layout="@layout/fragment_category" >
         <action
@@ -27,24 +27,29 @@
 
     <fragment
         android:id="@+id/navigation_saved"
-        android:name="com.syoon.news.app.ui.SavedFragment"
+        android:name="com.syoon.news.app.ui.fragment.SavedFragment"
         android:label="SavedFragment"
         tools:layout="@layout/fragment_saved" />
 
     <fragment
         android:id="@+id/navigation_news_detail"
-        android:name="com.syoon.news.app.ui.newsdetail.NewsDetailFragment"
+        android:name="com.syoon.news.app.ui.fragment.NewsDetailFragment"
         android:label="NewsDetailFragment"
-        tools:layout="@layout/fragment_news_detail"/>
+        tools:layout="@layout/fragment_news_detail">
+        <argument
+            android:name="news"
+            app:argType="com.syoon.news.app.model.News" />
+    </fragment>
 
     <fragment
         android:id="@+id/navigation_category_news"
-        android:name="com.syoon.news.app.ui.categorynews.CategoryNewsFragment"
+        android:name="com.syoon.news.app.ui.fragment.CategoryNewsFragment"
         android:label="CategoryNewsFragment"
         tools:layout="@layout/fragment_category_news">
         <action
             android:id="@+id/action_navigation_category_news_to_navigation_news_detail"
             app:destination="@id/navigation_news_detail" />
     </fragment>
+    <action android:id="@+id/action_global_navigation_news_detail" app:destination="@id/navigation_news_detail"/>
 
 </navigation>
