--- a/app/src/main/res/layout/item_top_news.xml
+++ b/app/src/main/res/layout/item_top_news.xml
@@ -69,7 +69,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="16dp"
-                android:text="@{topnews.publishedAt}"
+                timeDiff="@{topnews.publishedAt}"
                 app:layout_constraintBottom_toBottomOf="@id/tv_top_news_author"
                 app:layout_constraintEnd_toEndOf="parent"
                 tools:text="3 hours ago" />
